recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.error
PolygonFractal:6: error: not enough arguments for method polygonFractal: (levels: Int, sides: Int, length: Double, shrink: Double)Unit.
Unspecified value parameters length, shrink.
  polygonFractal(levels-1,length*shrink)
                ^PolygonFractal:8: error: not enough arguments for method polygonFractal: (levels: Int, sides: Int, length: Double, shrink: Double)Unit.
Unspecified value parameters length, shrink.
  polygonFractal(levels-1,length*shrink)
                ^PolygonFractal:10: error: not enough arguments for method polygonFractal: (levels: Int, sides: Int, length: Double, shrink: Double)Unit.
Unspecified value parameters length, shrink.
  polygonFractal(levels-1,length*shrink)
                ^PolygonFractal:12: error: not enough arguments for method polygonFractal: (levels: Int, sides: Int, length: Double, shrink: Double)Unit.
Unspecified value parameters length, shrink.
  polygonFractal(levels-1,length*shrink)
                ^PolygonFractal:14: error: not enough arguments for method polygonFractal: (levels: Int, sides: Int, length: Double, shrink: Double)Unit.
Unspecified value parameters length, shrink.
  polygonFractal(levels-1,length*shrink)
                ^PolygonFractal:16: error: not enough arguments for method polygonFractal: (levels: Int, sides: Int, length: Double, shrink: Double)Unit.
Unspecified value parameters length, shrink.
  polygonFractal(levels-1,length*shrink)
                ^